fixed spacing in main container and changed the screenshot

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ textarea{
 .color-box {
   font-size: 20px;
   height: 100%;
-  width: 80%;
+  width: 100%;
   min-width: 100px;
   text-align: left;
   vertical-align: top;
